src/styles/blocks/subscribe.scss
.subscribe {
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;
  height: 550px;
  margin-bottom: 20px;
  background-image: url(../images/subscribe_background.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 100%;

  &__form {
    display: flex;
  }

  &__title {
    font-weight: 700;
    font-size: 36px;
    line-height: 36px;
    text-align: center;
    padding-top: 88px;
    color: #fff;
  }

  &__action {
    font-weight: 400;
    font-size: 18px;
    line-height: 27px;
    color: #fff;
    text-align: center;
  }

  &__button {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-bottom: 88px;
    margin-top: 50px;

    &-text {
      display: inline-block;
      width: 230px;
      height: 50px;
      border: 1px solid transparent;
      text-align: center;
      box-sizing: border-box;
      font-weight: 400;
      font-size: 14px;
      line-height: 14px;
      color: #687480;

      @include onDeskTop {
        margin-right: 30px;
      }

      @include onTablet {
        margin-right: 16px;
      }

      &:hover {
        cursor: pointer;
      }
    }

    &-search {
      box-sizing: border-box;
      display: inline-block;
      width: 50px;
      height: 50px;
      background-image: url(../images/search_orange.png);
      color: #000;
      padding: 13px;
      border: 1px solid transparent;
      text-decoration: none;
      text-align: center;

      &:hover {
        cursor: pointer;
      }
    }
  }
}

